--- a/main.css
+++ b/main.css
@@ -33,7 +33,7 @@ button:focus-visible {
 button {
 	padding: 0.5rem 1rem;
 	border-radius: 5px;
-	margin: 1rem;
+	margin: 2rem;
 	border: none;
 	cursor: pointer;
 	background-color: #d3a3ff;
@@ -52,4 +52,8 @@ button:active {
 .output-text {
 	font-size: 1.5rem;
 	font-weight: 700;
+}
+
+.helper-text {
+	font-size: 1.2rem;
 }
