--- a/main.css
+++ b/main.css
@@ -56,6 +56,7 @@ button:active {
 
 .helper-text {
 	font-size: 1.2rem;
+	padding: 0 1.5rem;
 }
 
 .initial-render {
@@ -73,4 +74,32 @@ button:active {
 
 main {
 	display: none;
+}
+
+footer {
+	display: none;
+	position: fixed;
+	bottom: 0;
+	left: 0;
+	width: 100%;
+	padding: 1rem;
+}
+
+.footer-social {
+	list-style: none;
+	padding: 0;
+}
+
+.footer-social__links {
+	display: inline-block;
+	padding: 0 1.5rem;
+}
+
+.footer-social__links a {
+	text-decoration: none;
+	color: #fff;
+}
+
+.footer-social__links a:hover {
+	color: #cae0eb;
 }
